feat (backend: refactor) => inventory migrations, swag docs fix - removed redundant migration files related to inventories table - fixed typo on @Tag in user handler swagger annotations from 'Users' to 'users' - added new CreateOrderRequestDoc for order domain to avoid swag failing with Postgis type error

--- a/apps/backend/docs/swagger.yaml
+++ b/apps/backend/docs/swagger.yaml
@@ -223,7 +223,62 @@ definitions:
       status:
         $ref: '#/definitions/notification.NotificationStatus'
     type: object
-  order.CreateOrderRequest:
+  order.CreateOrderRequestDoc:
+    properties:
+      admin_id:
+        type: string
+      currency:
+        type: string
+      customer_id:
+        type: string
+      delivery_address:
+        type: string
+      delivery_point:
+        $ref: '#/definitions/order.Point'
+      image_url:
+        type: string
+      inventory_id:
+        description: replaced with product/variant id
+        type: string
+      merchant_id:
+        type: string
+      pickup_address:
+        type: string
+      pickup_point:
+        $ref: '#/definitions/order.Point'
+      product_id:
+        type: string
+      product_name:
+        description: snapshot at purchase time
+        type: string
+      quantity:
+        type: integer
+      total:
+        type: integer
+      unit_price:
+        type: integer
+      variant_id:
+        type: string
+      variant_name:
+        type: string
+    required:
+    - admin_id
+    - currency
+    - customer_id
+    - delivery_address
+    - delivery_point
+    - image_url
+    - inventory_id
+    - merchant_id
+    - pickup_address
+    - pickup_point
+    - product_id
+    - product_name
+    - quantity
+    - total
+    - unit_price
+    - variant_id
+    - variant_name
     type: object
   order.OrderDoc:
     properties:
@@ -1668,7 +1723,7 @@ paths:
         name: order
         required: true
         schema:
-          $ref: '#/definitions/order.CreateOrderRequest'
+          $ref: '#/definitions/order.CreateOrderRequestDoc'
       produces:
       - application/json
       responses:
@@ -2871,7 +2926,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Update a user's status
       tags:
-      - Users
+      - users
   /users/{id}/update:
     put:
       consumes:
