--- a/apps/backend/docs/swagger.yaml
+++ b/apps/backend/docs/swagger.yaml
@@ -237,9 +237,6 @@ definitions:
         $ref: '#/definitions/order.Point'
       image_url:
         type: string
-      inventory_id:
-        description: replaced with product/variant id
-        type: string
       merchant_id:
         type: string
       pickup_address:
@@ -268,7 +265,6 @@ definitions:
     - delivery_address
     - delivery_point
     - image_url
-    - inventory_id
     - merchant_id
     - pickup_address
     - pickup_point
@@ -297,8 +293,6 @@ definitions:
       id:
         type: string
       image_url:
-        type: string
-      inventory_id:
         type: string
       merchant_id:
         type: string
@@ -600,14 +594,8 @@ definitions:
     type: object
   store.CreateStoreRequest:
     properties:
-      banner_url:
-        description: example:"https://cdn.fastabiz.com/banners/kevins-banner.png"
+      location:
         type: string
-      description:
-        description: example:"Best electronics and accessories in Nairobi."
-        type: string
-      isPublic:
-        type: boolean
       logo_url:
         description: example:"https://cdn.fastabiz.com/logos/kevins.png"
         type: string
@@ -616,27 +604,17 @@ definitions:
         type: string
       ownerID:
         type: string
-      slug:
-        type: string
     required:
-    - description
-    - isPublic
+    - location
     - name
     - ownerID
-    - slug
     type: object
   store.Store:
     properties:
-      banner_url:
-        type: string
       created_at:
-        type: string
-      description:
         type: string
       id:
         type: string
-      is_public:
-        type: boolean
       location:
         description: optional
         type: string
@@ -647,19 +625,30 @@ definitions:
       owner_id:
         description: FK to users
         type: string
-      slug:
-        type: string
       updated_at:
         type: string
     type: object
+  store.StoreSummary:
+    properties:
+      id:
+        type: string
+      location:
+        type: string
+      logoURL:
+        type: string
+      name:
+        type: string
+      rating:
+        type: number
+    type: object
   store.UpdateStoreRequest:
     properties:
-      column:
+      location:
         type: string
-      value: {}
-    required:
-    - column
-    - value
+      logo:
+        type: string
+      name:
+        type: string
     type: object
   user.ChangePasswordRequest:
     properties:
@@ -2546,9 +2535,7 @@ paths:
       - public
   /stores/{id}:
     delete:
-      consumes:
-      - application/json
-      description: Deletes a store by its ID
+      description: Deletes a store owned by the authenticated user
       parameters:
       - description: Store ID
         in: path
@@ -2559,7 +2546,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: Store deleted
+          description: Deletion message
           schema:
             additionalProperties:
               type: string
@@ -2568,8 +2555,12 @@ paths:
           description: Invalid store ID
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
-          description: Failed to delete store
+          description: Internal server error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
       security:
@@ -2577,18 +2568,45 @@ paths:
       summary: Delete a store
       tags:
       - stores
-  /stores/{id}/update:
-    put:
-      consumes:
-      - application/json
-      description: Update a specific field of an existing store
+  /stores/{id}/summary:
+    get:
+      description: Fetch summarized info about a store
       parameters:
       - description: Store ID
         in: path
         name: id
         required: true
         type: string
-      - description: Field and value to update
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.StoreSummary'
+        "400":
+          description: Invalid ID
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Store not found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Get store summary
+      tags:
+      - stores
+  /stores/{id}/update:
+    put:
+      consumes:
+      - application/json
+      description: Update details of a store owned by the authenticated user
+      parameters:
+      - description: Store ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update request
         in: body
         name: update
         required: true
@@ -2598,17 +2616,17 @@ paths:
       - application/json
       responses:
         "200":
-          description: Store updated successfully
+          description: Update message
           schema:
             additionalProperties:
               type: string
             type: object
         "400":
-          description: Invalid store ID or request body
+          description: Invalid request
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-        "404":
-          description: Store not found
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
         "500":
@@ -2617,16 +2635,35 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponse'
       security:
       - JWT: []
-      summary: Update store
+      summary: Update a store
+      tags:
+      - stores
+  /stores/all_stores:
+    get:
+      description: Returns all stores (admin view or public)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Store'
+            type: array
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: List all stores
       tags:
       - stores
   /stores/by-id/{id}:
     get:
-      description: Fetches a single store using UUID
+      description: Fetch a single store by its UUID
       parameters:
       - description: Store ID
-        in: query
-        name: slug
+        in: path
+        name: id
         required: true
         type: string
       produces:
@@ -2641,44 +2678,17 @@ paths:
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
         "404":
-          description: Not found
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Get store by id
-      tags:
-      - stores
-  /stores/by-slug:
-    get:
-      description: Fetches a single store by its slug
-      parameters:
-      - description: Store slug
-        in: query
-        name: slug
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/store.Store'
-        "400":
-          description: Missing slug
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "404":
           description: Store not found
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Get store by slug
+      summary: Get a store by ID
       tags:
       - stores
   /stores/create:
     post:
       consumes:
       - application/json
-      description: Creates a new store for an owner and returns the created store
+      description: Creates a new store for the authenticated owner
       parameters:
       - description: Store input
         in: body
@@ -2690,11 +2700,16 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Created store
           schema:
-            $ref: '#/definitions/store.Store'
+            additionalProperties: true
+            type: object
         "400":
           description: Invalid request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
         "500":
@@ -2706,9 +2721,9 @@ paths:
       summary: Create a new store
       tags:
       - stores
-  /stores/public:
+  /stores/me:
     get:
-      description: Returns all stores marked as public
+      description: Returns all stores owned by the current user
       produces:
       - application/json
       responses:
@@ -2718,11 +2733,51 @@ paths:
             items:
               $ref: '#/definitions/store.Store'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      summary: List all public stores
+      security:
+      - JWT: []
+      summary: List authenticated owner's stores
+      tags:
+      - stores
+  /stores/me/paged:
+    get:
+      description: Returns stores owned by authenticated user with limit and offset
+      parameters:
+      - description: Maximum number of items to return
+        in: query
+        name: limit
+        type: integer
+      - description: Number of items to skip
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.StoreSummary'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - JWT: []
+      summary: List stores with pagination
       tags:
       - stores
   /users/{id}:
